<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B1B1B"
    tools:context=".SignupActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@drawable/image1">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewExistingUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="Existing User ?"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="#1B1B1B"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLoginSignUpActivity"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:backgroundTint="#1B1B1B"
                android:fontFamily="@font/poppins_bold"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="Login"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="45dp"
                app:flow_verticalAlign="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewExistingUser"
                tools:ignore="MissingConstraints" />

        </FrameLayout>
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewSignUpWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="220dp"
        android:fontFamily="@font/astrospace"
        android:text="Sign up with"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewCedric"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/astrospace"
        android:text="Cedric"
        android:textAlignment="viewStart"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignUpWith"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/username"
        android:textColorHint="#999999"
        app:boxBackgroundColor="#343434"
        app:boxCornerRadiusBottomEnd="45dp"
        app:boxCornerRadiusBottomStart="45dp"
        app:boxCornerRadiusTopEnd="45dp"
        app:boxCornerRadiusTopStart="45dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="#999999"
        app:layout_constraintTop_toBottomOf="@+id/textViewCedric"
        app:startIconDrawable="@drawable/user"
        app:startIconTint="#999999"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:inputType="textPersonName|textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/email"
        android:textColorHint="#999999"
        app:boxBackgroundColor="#343434"
        app:boxCornerRadiusBottomEnd="45dp"
        app:boxCornerRadiusBottomStart="45dp"
        app:boxCornerRadiusTopEnd="45dp"
        app:boxCornerRadiusTopStart="45dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="#999999"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUsername"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="#999999"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:inputType="textPersonName|textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password"
        android:textColorHint="#999999"
        app:boxBackgroundColor="#343434"
        app:boxCornerRadiusBottomEnd="45dp"
        app:boxCornerRadiusBottomStart="45dp"
        app:boxCornerRadiusTopEnd="45dp"
        app:boxCornerRadiusTopStart="45dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="#999999"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="#999999"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:inputType="textPassword"
            android:maxLength="8"
            android:singleLine="true"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/confirm_password"
        android:textColorHint="#999999"
        app:boxBackgroundColor="#343434"
        app:boxCornerRadiusBottomEnd="45dp"
        app:boxCornerRadiusBottomStart="45dp"
        app:boxCornerRadiusTopEnd="45dp"
        app:boxCornerRadiusTopStart="45dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintTextColor="#999999"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="#999999"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:inputType="textPassword"
            android:maxLength="8"
            android:singleLine="true"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--progress bar for loading -->
    <ProgressBar
        android:id="@+id/idLoadingPB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutConfirmPassword"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSigUp"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="Signup"
        android:textAllCaps="false"
        android:textColor="#1B1B1B"
        android:textSize="18sp"
        app:cornerRadius="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idLoadingPB"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>