<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B1B1B"
    app:statusBarBackground="@color/yellow"

    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:background="@drawable/image2">
<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="vertical"-->
<!--                android:id="@+id/linearLayout3">-->


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textViewSignUpWith"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/astropace"
                    android:text="Welcome to"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textColor="#1B1B1B"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textViewCedric"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="55dp"
                    android:fontFamily="@font/astrospace"
                    android:text="@string/cedric"
                    android:textAlignment="viewStart"
                    android:textAllCaps="true"
                    android:textColor="#1B1B1B"
                    android:textSize="40sp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="20dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewPlzLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="Please Login to continue"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="#1B1B1B"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="92dp"
                app:layout_constraintTop_toBottomOf="@+id/textViewCedric"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="20dp" />
<!--            </LinearLayout>-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutUsernameOrEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="190dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/email"
                android:textColorHint="#999999"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="45dp"
                app:boxCornerRadiusBottomStart="45dp"
                app:boxCornerRadiusTopEnd="45dp"
                app:boxCornerRadiusTopStart="45dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="#999999"
                app:startIconDrawable="@drawable/ic_baseline_email_24"
                app:startIconTint="#999999"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextLoginUsernameOrEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="textPersonName|textEmailAddress"
                    android:singleLine="true"
                    android:textColor="#343434" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="270dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/password"
                android:textColorHint="#999999"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="45dp"
                app:boxCornerRadiusBottomStart="45dp"
                app:boxCornerRadiusTopEnd="45dp"
                app:boxCornerRadiusTopStart="45dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="#999999"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:startIconTint="#999999"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="textPassword"
                    android:maxLength="8"
                    android:singleLine="true"
                    android:textColor="#343434" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="330dp"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="160dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="Forget Password"
                android:textAlignment="viewEnd"
                android:textAllCaps="false"
                android:textColor="#7F6029"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:layout_marginTop="380dp"
                android:backgroundTint="#1B1B1B"
                android:fontFamily="@font/montserrat_bold"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="Login"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="45dp"
                android:layout_gravity="center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewForgetPassword"
                tools:ignore="MissingConstraints" />

        </FrameLayout>
    </LinearLayout>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewOr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="OR"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSigUpLoginActivity"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/montserrat_bold"
        android:text="SignUp"
        android:textAllCaps="true"
        android:textColor="#1B1B1B"
        android:textAlignment="center"
        android:textSize="18sp"
        app:cornerRadius="45dp"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOr"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>